--- a/liskonlinebroadcaster/src/main/AndroidManifest.xml
+++ b/liskonlinebroadcaster/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Shift tx Sender"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name="lisksnake.liskonlinebroadcaster.MainActivity"
-            android:label="@string/app_name"
+            android:label="Shift tx Sender"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
